# locust-poetry-demo

./: README.md  pyproject.toml
locust_poetry_demo/: locustfile.py
