[tool.poetry]
name = "locust-poetry-demo"
version = "0.1.0"
description = ""
authors = ["gusdecante <gustavo.antunes@infoxnet.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
locust = "^2.20.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
